2014-01-14  Kirit Saelensminde  <kirit@felspar.com>
 Fix some warnings for a couple of compilers.

2014-01-12  Kirit Saelensminde  <kirit@felspar.com>
 If clang is on the path for Linux then use that in preference to gcc
 Extend the `fostlib::timestamp` and `fostlib::date` interfaces somewhat. Added a number of missing coercions and constructors to make things simpler and made sure that there is no loss in precision when converting to and from strings and JSON. Moved a number of timestamp and date members inline for speed.

2013-08-20  Kirit Saelensminde  <kirit@felspar.com>
 Added `fostlib::log::flush()` which blocks until the previous logged messages have been processed.

2013-06-07  Kirit Saelensminde  <kirit@felspar.com>
 The environment variable VERSION can now be used to specify an embedded version number in the result of fost-lib derived targets, or other shared libraries that make use of the <version> property.

2013-05-03  Kirit Saelensminde  <kirit@felspar.com>
 Make sure that the `fostlib::worker` can't leak an exception when it's destructed.

2013-03-10  Kirit Saelensminde  <kirit@felspar.com>
 Added the ability to set the log message module when using the logging DSL through a new `.module()` member on the log message builder.
 `fostlib::absorbException` has been deprecated in favour of `fostlib::absorb_exception`.
 `fostlib::replaceAll` has been deprecated in favour of `fostlib::replace_all`.

2013-03-03  Kirit Saelensminde  <kirit@felspar.com>
 Changed a couple of exceptions to put extended data into the JSON data rather than the free form text.

2013-03-03  Kirit Saelensminde  <kirit@felspar.com>
 Changed the `what()` implementation of `fostlib::exceptions::exception` to no longer write out more than one line (unless the info member of the exception does so). Also removed the settings for controlling the format of the `what()` string.

2013-02-23  Kirit Saelensminde  <kirit@felspar.com>