@@ -24,3 +24,11 @@ FSL_TEST_FUNCTION(construction_multiargument_numeric) {
     fostlib::jcursor j2(1, 2, 3);
     fostlib::jcursor j3(1, 2, 3, 4);
 }
+
+
+FSL_TEST_FUNCTION(split) {
+    FSL_CHECK_EQ(fostlib::jcursor::split("12/34", "/"), fostlib::jcursor(12, 34));
+    FSL_CHECK_EQ(fostlib::jcursor::split("item.34", "."), fostlib::jcursor("item", 34));
+    FSL_CHECK_EQ(fostlib::jcursor::split("item::sub", "::"), fostlib::jcursor("item", "sub"));
+}
+
